--- a/styles/Tweet.module.css
+++ b/styles/Tweet.module.css
@@ -5,3 +5,56 @@
     padding-left: 10px;
     
 }
+
+.containerInput {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    height: 60%px;
+
+}
+
+.title {
+    width: 80%;
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+
+.input {
+    width: 80%;
+    height: 10%;
+}
+
+.inputTxt {
+    height: 50%;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid rgb(120, 120, 120);
+    color: rgb(216, 216, 216);
+    font-size: 1.2rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
+}
+
+.tweetContainer {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    width: 80%;
+    height: 5%;
+    gap: 20px;
+}
+
+.tweetBtn {
+    background-color: deepskyblue;
+    width: 120px;
+    border: none;
+    border-radius: 30px;
+    height: 70%;
+    color: aliceblue;
+    font-weight: bold;
+    font-size: 1rem;
+    
+}
