--- a/styles/Tweet.module.css
+++ b/styles/Tweet.module.css
@@ -1,5 +1,6 @@
 .container{
     display: flex;
+    flex-direction: column;
     width: 50vw;
     border-right: 1px solid;
     padding-left: 10px;
@@ -11,7 +12,7 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    height: 60%px;
+    height: 30%;
 
 }
 
@@ -23,7 +24,7 @@
 
 .input {
     width: 80%;
-    height: 10%;
+    height: 70px;
 }
 
 .inputTxt {
@@ -52,9 +53,9 @@
     width: 120px;
     border: none;
     border-radius: 30px;
-    height: 70%;
+    height: 35px;
     color: aliceblue;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.1rem;
     
 }
